# schedule_assistant

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  SETUP.md  check_status.sh  deploy-windows.ps1  deploy.bat  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  clean_records.py  env.example  init_db.py  main.py  migrate_categories.py  pyproject.toml  reset_and_migrate.py  test_api_endpoints.py  test_integration.py
backend/app/core/: auth.py  config.py  database.py  scheduler.py
backend/app/models/: __init__.py  booking.py  category.py  equipment.py  user.py
backend/app/routes/: admin.py  auth.py  booking.py  booking_auth.py  category.py  equipment.py  equipment_simple.py
backend/app/schemas/: booking.py  category.py  equipment.py  user.py
frontend/: Dockerfile  generate-certs.sh  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.debug.tsx  App.minimal.tsx  App.simple.tsx  App.test.tsx  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AdminDatabasePanel.tsx  AdminEquipmentList.tsx  BookingCalendar.tsx  BookingList.tsx  BookingModal.tsx  CategoryManagement.tsx  EquipmentBookingCalendar.tsx  EquipmentCreateModal.tsx  EquipmentDetailsModal.tsx  EquipmentEditModal.tsx  EquipmentList.tsx  Login.tsx  LoginFigma.tsx  LoginModern.tsx  LoginSplit.tsx  Navbar.tsx  ProtectedRoute.tsx  Register.tsx  RegisterFigma.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/types/: index.ts
frontend/src/utils/: timezone.ts
